fix: remove text overflow styles from ExperienceCard component

--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -72,9 +72,6 @@
   font-size: 25px;
   text-align: center;
   font-weight: 700;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
 }
 
 .experience-roundedimg {
